Localizations inside the Framework
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39290 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2016-01-18 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/ExtendedInfo/Role/ExtInfoRole.m
+	* FSNode/ExtendedInfo/Role/GNUmakefile.in
+	Localizations inside the Bundle.
+
+	* FSNode/FSNListView.m
+	* FSNode/FSNodeRep.m
+	* FSNode/GNUmakefile.in
+	Localizations inside the Framework
+
 2016-01-16 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
