Fix reading of defaults.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39291 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2016-01-18 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/Desktop/GWDesktopView.m
+	Fix reading of defaults.
+
+2016-01-18 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/ExtendedInfo/Role/ExtInfoRole.m
 	* FSNode/ExtendedInfo/Role/GNUmakefile.in
 	Localizations inside the Bundle.
