Localizations inside the Framework
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39292 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2016-01-18 Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNBrowser.m
+	* FSNode/FSNIconsView.m
+	* FSNode/FSNListView.m
+	* FSNode/FSNode.m
+	Localizations inside the Framework
+
+2016-01-18 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/Desktop/GWDesktopView.m
 	Fix reading of defaults.
 
