--- a/FSNode/Resources/Italian.lproj/Localizable.strings
+++ b/FSNode/Resources/Italian.lproj/Localizable.strings
@@ -86,7 +86,7 @@ add comments above this one
 "Date Modified" = "Data Modifica";
 
 /* File: ../FSNListView.m:159 */
-"Size" = "Dim.";
+"Size" = "Dimensione";
 
 /* File: ../FSNListView.m:162 */
 "Owner" = "Proprietario";
