--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-01-26 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/BrowserViewerPref.m
+	Fix key to match correct spelling.
+
 2016-01-20 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowser.m
