Fix recursive button translation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39314 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-01-27  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Resources/English.lproj/Finder.gorm
+	* Workspace/Finder/Finder.m
+	Fix "recursive" button translation.
+
 2016-01-26 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/BrowserViewerPref.m
