fix obvious typo
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39316 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -245,7 +245,7 @@
 "Remove" = "Remove";
 "Search for items whose:" = "Search for items whose:";
 "Specific places" = "Specific places";
-"Recursive" = "Recurisve";
+"Recursive" = "Recursive";
 "Search" = "Search";
 
 
