Fix spelling error
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39327 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-02-02  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Finder/Modules/FModuleSize/FModuleSize.m
+	Fix spelling error.
+
 2016-01-27  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Resources/English.lproj/Finder.gorm
